--- a/index.html
+++ b/index.html
@@ -1,1 +1,65 @@
-My Page
+<!DOCTYPE html>
+<html lang="en">
+  <head>
+    <meta charset="utf-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <title>angular-pouchdb</title>
+    <link href="//cdn.jsdelivr.net/bootstrap/3.3.4/css/bootstrap.css" rel="stylesheet">
+    <link href="//cdn.jsdelivr.net/highlight.js/8.5.0/styles/github.min.css" rel="stylesheet">
+    <link href="app.css" rel="stylesheet">
+  </head>
+
+  <body ng-app="app">
+    <noscript>
+      <div class="container">
+        <div class="jumbotron">
+          <h1>angular-pouchdb</h1>
+          <p class="lead">AngularJS wrapper for PouchDB</p>
+          <p class="text-warning">This website requires JavaScript.</p>
+          <p>
+            <span>Feel free to browse the source on</span>
+            <a href="https://github.com/angular-pouchdb/angular-pouchdb/tree/gh-pages">GitHub</a>
+          </p>
+        </div>
+      </div>
+    </noscript>
+
+    <div ui-view="navbar"></div>
+
+    <div class="container">
+      <div ui-view="content">
+        <div ui-view></div>
+      </div>
+    </div>
+
+    <script src="//cdn.jsdelivr.net/angularjs/1.3.14/angular.min.js"></script>
+    <script src="//cdn.jsdelivr.net/angularjs/1.3.14/angular-sanitize.min.js"></script>
+    <script src="//cdn.jsdelivr.net/angular.ui-router/0.2.13/angular-ui-router.min.js"></script>
+    <script src="//cdn.jsdelivr.net/angular.bootstrap/0.12.1/ui-bootstrap-tpls.min.js"></script>
+    <script src="//cdn.jsdelivr.net/pouchdb/3.3.1/pouchdb.min.js"></script>
+
+    <script src="//cdn.jsdelivr.net/highlight.js/8.5.0/highlight.min.js"></script>
+    <script src="https://cdn.rawgit.com/pc035860/angular-highlightjs/master/build/angular-highlightjs.min.js"></script>
+    <script src="https://cdn.rawgit.com/nolanlawson/pouchdb-authentication/master/dist/pouchdb.authentication.min.js"></script>
+
+    <script src="https://cdn.rawgit.com/angular-pouchdb/angular-pouchdb/2.0.0-rc.2/dist/angular-pouchdb.js"></script>
+
+    <script src="app.js"></script>
+    <script src="navbar.js"></script>
+    <script src="examples.service.js"></script>
+    <script src="home/home.module.js"></script>
+    <script src="home/home.controller.js"></script>
+    <script src="examples/examples.module.js"></script>
+    <script src="examples/examples.controller.js"></script>
+    <script src="examples/examples-index.controller.js"></script>
+    <script src="examples/changes/changes.module.js"></script>
+    <script src="examples/changes/changes.controller.js"></script>
+    <script src="examples/live/live.module.js"></script>
+    <script src="examples/live/live.controller.js"></script>
+    <script src="examples/plugins/plugins.module.js"></script>
+    <script src="examples/plugins/plugins.controller.js"></script>
+    <script src="examples/replicate/replicate.module.js"></script>
+    <script src="examples/replicate/replicate.controller.js"></script>
+  </body>
+</html>
