chore: switch to master version

--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
     <script src="https://cdn.rawgit.com/pc035860/angular-highlightjs/master/build/angular-highlightjs.min.js"></script>
     <script src="https://cdn.rawgit.com/nolanlawson/pouchdb-authentication/master/dist/pouchdb.authentication.min.js"></script>
 
-    <script src="https://cdn.rawgit.com/angular-pouchdb/angular-pouchdb/2.0.0-rc.2/dist/angular-pouchdb.js"></script>
+    <script src="https://cdn.rawgit.com/angular-pouchdb/bower-angular-pouchdb/master/angular-pouchdb.js"></script>
 
     <script src="app.js"></script>
     <script src="navbar.js"></script>
